--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
   <head>
     <meta charset="UTF-8">
+    <meta name="description" content="sitio oficial Ale Fuentes"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Portafolio</title>
 
